// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordsForm.vue renders records search form 1`] = `
<div>
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <h1>
        record.record
      </h1>
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <!---->
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <h2
        class="bg-sal-orange"
      >
        record.search
      </h2>
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <b-button-stub
        class="btn-orange space-right space-down"
        tag="button"
        target="_self"
        type="button"
        variant="light"
      >
        
        Paintball
      
      </b-button-stub>
    </b-col-stub>
  </b-row-stub>
   
  <!---->
   
  <b-form-stub>
    <b-row-stub
      tag="div"
    >
      <b-col-stub
        cols="12"
        md="6"
        tag="div"
        xl="4"
      >
        <b-form-group-stub
          feedbackarialive="assertive"
          id="input-group-record-level"
          label="record.choose_level"
          labelfor="input-record-level"
        >
          <b-form-select-stub
            disabledfield="disabled"
            htmlfield="html"
            id="input-record-level"
            labelfield="label"
            options="[object Object]"
            optionsfield="options"
            required="true"
            selectsize="0"
            textfield="name"
            value="1"
            valuefield="id"
          />
        </b-form-group-stub>
      </b-col-stub>
       
      <b-col-stub
        cols="12"
        md="6"
        tag="div"
        xl="4"
      >
        <b-form-group-stub
          description="statistics.choose_multiple"
          feedbackarialive="assertive"
          id="input-group-categories"
          label="result.category"
          labelfor="input-categories"
        >
          <b-form-select-stub
            disabledfield="disabled"
            htmlfield="html"
            id="input-categories"
            labelfield="label"
            multiple="true"
            options="[object Object],[object Object]"
            optionsfield="options"
            selectsize="0"
            textfield="name"
            value=""
            valuefield="id"
          />
        </b-form-group-stub>
      </b-col-stub>
       
      <b-col-stub
        cols="12"
        md="6"
        tag="div"
        xl="4"
      >
        <b-form-group-stub
          description="statistics.choose_multiple"
          feedbackarialive="assertive"
          id="input-group-competition-types"
          label="competition.type"
          labelfor="input-competition-types"
        >
          <b-form-select-stub
            disabledfield="disabled"
            htmlfield="html"
            id="input-competition-types"
            labelfield="label"
            multiple="true"
            options="[object Object]"
            optionsfield="options"
            selectsize="0"
            textfield="name"
            value=""
            valuefield="id"
          />
        </b-form-group-stub>
      </b-col-stub>
       
      <b-col-stub
        cols="12"
        md="6"
        tag="div"
        xl="4"
      >
        <b-form-group-stub
          feedbackarialive="assertive"
          id="input-group-checkboxes"
        >
          <b-form-checkbox-stub
            checked="true"
            id="checkbox-approved"
            name="checkbox-approved"
            value="true"
          >
            
            record.include_approved
          
          </b-form-checkbox-stub>
           
          <b-form-checkbox-stub
            checked="true"
            id="checkbox-preliminary"
            name="checkbox-preliminary"
            value="true"
          >
            
            record.include_preliminary
          
          </b-form-checkbox-stub>
           
          <b-form-checkbox-stub
            id="checkbox-historical"
            name="checkbox-historical"
            value="true"
          >
            
            record.include_historical
          
          </b-form-checkbox-stub>
        </b-form-group-stub>
      </b-col-stub>
       
      <b-col-stub
        cols="12"
        md="6"
        tag="div"
        xl="4"
      >
        <b-button-stub
          class="btn-orange space-right"
          tag="button"
          target="_self"
          type="submit"
          variant="light"
        >
          
          search.search
        </b-button-stub>
         
        <b-button-stub
          tag="button"
          target="_self"
          type="reset"
          variant="danger"
        >
          reset
        </b-button-stub>
        <br />
        <br />
      </b-col-stub>
    </b-row-stub>
  </b-form-stub>
   
  <!---->
</div>
`;

exports[`RecordsForm.vue search records 1`] = `
<div>
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <h1>
        record.record
      </h1>
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <!---->
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <h2
        class="bg-sal-orange"
      >
        record.search
      </h2>
    </b-col-stub>
  </b-row-stub>
   
  <b-row-stub
    tag="div"
  >
    <b-col-stub
      tag="div"
    >
      <b-button-stub
        class="btn-orange space-right space-down"
        tag="button"
        target="_self"
        type="button"
        variant="light"
      >
        
        Paintball
      
      </b-button-stub>
    </b-col-stub>
  </b-row-stub>
   
  <!---->
   
  <b-form-stub>
    <b-row-stub
      tag="div"
    >
      <b-col-stub
        cols="12"
        md="6"
        tag="div"
        xl="4"
      >
        <b-form-group-stub
          feedbackarialive="assertive"
          id="input-group-record-level"
          label="record.choose_level"
          labelfor="input-record-level"
        >
          <b-form-select-stub
            disabledfield="disabled"
            htmlfield="html"
            id="input-record-level"
            labelfield="label"
            options="[object Object]"
            optionsfield="options"
            required="true"
            selectsize="0"
            textfield="name"
            value="1"
            valuefield="id"
          />
        </b-form-group-stub>
      </b-col-stub>
       
      <b-col-stub
        cols="12"
        md="6"
        tag="div"
        xl="4"
      >
        <b-form-group-stub
          description="statistics.choose_multiple"
          feedbackarialive="assertive"
          id="input-group-categories"
          label="result.category"
          labelfor="input-categories"
        >
          <b-form-select-stub
            disabledfield="disabled"
            htmlfield="html"
            id="input-categories"
            labelfield="label"
            multiple="true"
            options="[object Object],[object Object]"
            optionsfield="options"
            selectsize="0"
            textfield="name"
            value="1,2"
            valuefield="id"
          />
        </b-form-group-stub>
      </b-col-stub>
       
      <b-col-stub
        cols="12"
        md="6"
        tag="div"
        xl="4"
      >
        <b-form-group-stub
          description="statistics.choose_multiple"
          feedbackarialive="assertive"
          id="input-group-competition-types"
          label="competition.type"
          labelfor="input-competition-types"
        >
          <b-form-select-stub
            disabledfield="disabled"
            htmlfield="html"
            id="input-competition-types"
            labelfield="label"
            multiple="true"
            options="[object Object]"
            optionsfield="options"
            selectsize="0"
            textfield="name"
            value="1,2"
            valuefield="id"
          />
        </b-form-group-stub>
      </b-col-stub>
       
      <b-col-stub
        cols="12"
        md="6"
        tag="div"
        xl="4"
      >
        <b-form-group-stub
          feedbackarialive="assertive"
          id="input-group-checkboxes"
        >
          <b-form-checkbox-stub
            checked="true"
            id="checkbox-approved"
            name="checkbox-approved"
            value="true"
          >
            
            record.include_approved
          
          </b-form-checkbox-stub>
           
          <b-form-checkbox-stub
            id="checkbox-preliminary"
            name="checkbox-preliminary"
            value="true"
          >
            
            record.include_preliminary
          
          </b-form-checkbox-stub>
           
          <b-form-checkbox-stub
            id="checkbox-historical"
            name="checkbox-historical"
            value="true"
          >
            
            record.include_historical
          
          </b-form-checkbox-stub>
        </b-form-group-stub>
      </b-col-stub>
       
      <b-col-stub
        cols="12"
        md="6"
        tag="div"
        xl="4"
      >
        <b-button-stub
          class="btn-orange space-right"
          tag="button"
          target="_self"
          type="submit"
          variant="light"
        >
          
          search.search
        </b-button-stub>
         
        <b-button-stub
          tag="button"
          target="_self"
          type="reset"
          variant="danger"
        >
          reset
        </b-button-stub>
        <br />
        <br />
      </b-col-stub>
    </b-row-stub>
  </b-form-stub>
   
  <recordsresults-stub
    searchparameters="?sport=1&level=1&category=1,2&type=1,2&approved=1&historical=0"
  />
</div>
`;
